@@ -1007,3 +1007,9 @@ History:
     - Seperate module now
   - cluster_cpu_info()
     - Seperate module now but still not working.
+
+- 1 Jul 2014 M.Fuerstenau version 0.9.16a
+  - Unfortunately published some modules containing debugging outpu. Fixed.
+    - host_disk_io_info.pm
+    - process_perfdata.pm
+    - vm_disk_io_info.pm
